--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -325,7 +325,7 @@
 
 .exalt-mobile-menu-toggle {
     display: block;
-	margin-left: auto;
+	//margin-left: auto;
 
 	@media only screen and (min-width: 768px) {
 		display: none;
