--- a/style-rtl.css
+++ b/style-rtl.css
@@ -5,7 +5,7 @@ Theme URI: https://themezhut.com/themes/exalt/
 Author: ThemezHut
 Author URI: https://themezhut.com
 Description: Exalt WordPress theme is designed specially for bloggers who want a seamless online publishing experience. Packed with an array of customization options, this theme empowers online publishers with the tools they need to stand out. Its clean and minimal design ensures a distraction-free reading experience, while its lightweight build guarantees blazing-fast loading times. Exalt is implemented with the best coding practices to ensure stability, security, and compatibility with WordPress standards. See more details at https://themezhut.com/themes/exalt/ See the demo at - https://themezhut.com/demo/exalt/
-Version: 1.0.4
+Version: 1.0.5
 Tested up to: 6.5
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
@@ -756,6 +756,7 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"],
+.exalt-cta-btn,
 .exalt-readmore-btn {
   border: none;
   border-radius: 3px;
@@ -773,6 +774,7 @@ button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover,
+.exalt-cta-btn:hover,
 .exalt-readmore-btn:hover {
   color: var(--exalt-color-button-hover-text);
   background: var(--exalt-color-button-hover-background);
@@ -785,6 +787,8 @@ input[type="reset"]:active,
 input[type="reset"]:focus,
 input[type="submit"]:active,
 input[type="submit"]:focus,
+.exalt-cta-btn:active,
+.exalt-cta-btn:focus,
 .exalt-readmore-btn:active,
 .exalt-readmore-btn:focus {
   background: var(--exalt-color-button-focus-background);
@@ -798,6 +802,10 @@ svg.exalt-svg-icon {
   font-size: var(--exalt-font-size-base);
   display: inline-block;
   padding: 0.7rem 0.9rem;
+}
+
+.exalt-cta-btn {
+  margin: 0 10px;
 }
 
 input[type="text"],
@@ -904,6 +912,7 @@ textarea {
   margin-left: auto;
   display: flex;
   align-items: center;
+  flex-shrink: 0;
 }
 
 .site-branding-container .site-logo {
@@ -984,27 +993,15 @@ textarea {
 
 .exalt-default-header.logo-aligned-center .exalt-header-inner {
   justify-content: center;
-  flex-direction: column;
   flex-wrap: wrap;
-  text-align: center;
-}
-
-.exalt-default-header.logo-aligned-center .exalt-header-inner > *:not(:first-child) {
-  margin-top: 1em;
-}
-
-.exalt-default-header.logo-aligned-center .site-branding-container {
-  margin: 0 auto;
-  flex-direction: column;
-}
-
-.exalt-default-header.logo-aligned-center .site-logo {
-  margin: 0 auto;
 }
 
 .exalt-default-header.logo-aligned-center .exalt-header-sidebar {
   margin-right: auto;
   margin-left: auto;
+  order: 20;
+  margin-top: 30px;
+  flex-basis: 100%;
 }
 
 .exalt-default-header.logo-aligned-center .exalt-mobile-menu-toggle {
@@ -1013,23 +1010,53 @@ textarea {
   padding: 10px;
 }
 
+@media (min-width: 768px) {
+  .exalt-default-header.logo-aligned-center .site-branding-container {
+    margin: 0 auto;
+    flex-direction: column;
+  }
+  .exalt-default-header.logo-aligned-center .exalt-header-inner-left,
+  .exalt-default-header.logo-aligned-center .site-branding-container,
+  .exalt-default-header.logo-aligned-center .exalt-header-inner-right {
+    flex: 1;
+    width: auto;
+  }
+  .exalt-default-header.logo-aligned-center .site-title,
+  .exalt-default-header.logo-aligned-center .site-description {
+    margin-left: 0;
+    text-align: center;
+  }
+  .exalt-default-header.logo-aligned-center .site-logo {
+    margin: 0 auto;
+  }
+  .exalt-default-header.logo-aligned-center .exalt-social-menu {
+    margin-left: auto;
+  }
+  .exalt-default-header.logo-aligned-center .exalt-cta-btn {
+    margin-right: auto;
+  }
+}
+
 .exalt-default-header.logo-aligned-right .exalt-header-inner {
   justify-content: flex-end;
 }
 
-.exalt-default-header.logo-aligned-right .exalt-header-sidebar {
-  order: -10;
-  margin-left: auto;
-  margin-right: 0;
+@media (min-width: 768px) {
+  .exalt-default-header.logo-aligned-right .exalt-header-sidebar {
+    order: -10;
+  }
+  .exalt-default-header.logo-aligned-right .exalt-header-inner-left {
+    order: -20;
+  }
 }
 
 .exalt-default-header.logo-aligned-right .site-branding-container {
   margin-left: 0;
-  margin-right: 1.5em;
+  margin-right: auto;
 }
 
 .exalt-default-header.logo-aligned-right .exalt-mobile-menu-toggle {
-  order: -5;
+  order: -30;
   margin-left: auto;
   margin-right: 0;
   padding: 10px 0 10px 10px;
@@ -1043,11 +1070,13 @@ textarea {
 }
 
 @media (min-width: 768px) {
-  .exalt-default-header.has-header-sb:not(.logo-aligned-center) .exalt-header-sidebar {
-    flex-basis: 60.66667%;
+  .exalt-default-header.has-header-sb:not(.logo-aligned-center) {
+    /*.exalt-header-sidebar {
+			flex-basis: 60.66667%;
+		}*/
   }
   .exalt-default-header.has-header-sb:not(.logo-aligned-center) .site-branding-container {
-    flex-basis: 39.33333%;
+    flex-basis: 25%;
   }
 }
 
@@ -1060,6 +1089,12 @@ textarea {
   .exalt-line-header .exalt-header-inner {
     padding-top: 20px;
     padding-bottom: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .exalt-line-header .exalt-social-menu {
+    display: none;
   }
 }
 
@@ -1260,10 +1295,6 @@ textarea {
   }
 }
 
-.exalt-header-sidebar {
-  margin-right: auto;
-}
-
 @media only screen and (max-width: 768px) {
   .exalt-header-sidebar {
     order: 2;
@@ -1322,6 +1353,30 @@ textarea {
   width: 100%;
   height: auto;
   vertical-align: middle;
+}
+
+.exalt-header-inner-left,
+.exalt-header-inner-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.exalt-header-inner-left .exalt-cta-btn,
+.exalt-header-inner-right .exalt-cta-btn {
+  margin-bottom: 4px;
+}
+
+.exalt-header-inner-left .exalt-social-menu,
+.exalt-header-inner-right .exalt-social-menu {
+  font-size: 17px;
+}
+
+@media (max-width: 768px) {
+  .exalt-header-inner-left .exalt-social-menu,
+  .exalt-header-inner-right .exalt-social-menu {
+    display: none;
+  }
 }
 
 /* Footer */
@@ -1686,7 +1741,6 @@ body.seperate-containers .comment-list li:first-child .trackback {
 
 .exalt-mobile-menu-toggle {
   display: block;
-  margin-right: auto;
 }
 
 @media only screen and (min-width: 768px) {
